[package]
name = "puncture-cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
puncture-cli-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
