[package]
name = "puncture-client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diesel = { workspace = true }
iroh = { workspace = true }
lightning = { workspace = true }
lightning-invoice = { workspace = true }
puncture-client-core = { workspace = true }
puncture-client-db = { workspace = true }
puncture-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
