[package]
name = "puncture-client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
iroh = { workspace = true }
puncture-api-core = { workspace = true }
puncture-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
