[package]
name = "puncture-core"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
iroh = { workspace = true }
lightning-invoice = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
