[package]
name = "puncture-daemon"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bitcoin = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
diesel = { workspace = true }
futures = { workspace = true }
iroh = { workspace = true }
ldk-node = { workspace = true }
lightning = { workspace = true }
lightning-invoice = { workspace = true }
maud = { workspace = true }
serde = { workspace = true }
puncture-client-core = { workspace = true }
puncture-cli-core = { workspace = true }
puncture-core = { workspace = true }
puncture-daemon-db = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
